--- a/mestres.html
+++ b/mestres.html
@@ -120,7 +120,7 @@
             </div>
 
 			<div class="box_m">
-                <img src="images/garrincha (1).jpg">
+                <img src="https://i.ibb.co/qmQgtcC/garrincha-1.png">
                 <div class="info">
                     <h3>Garrincha</h3>
                     <p>Mestre Garrincha is a skilled capoeira practitioner and musician from Rio de Janeiro, Brazil. He became a mestre in 1978 and has taught capoeira all over the world. He is also known for his unique style of playing the berimbau and his proficiency in other martial arts.</p>
@@ -629,7 +629,7 @@
             </div>
 
             <div class="box_m">
-                <img src="images/ja morreo.jpg">
+                <img src="https://i.ibb.co/F4xzdT7/ja-morreo.jpg">
                 <div class="info">
                     <h3>Já Morreu (2019)</h3>
                     <h2>(Elias)</h2>
@@ -639,7 +639,7 @@
             </div>
 
             <div style="float: left;" class="box_m">
-                <img src="images/marcio santos.jpg">
+                <img src="https://i.ibb.co/qWd5pRV/marcio-santos.jpg">
                 <div class="info">
                     <h3>Marcio Santos (2019)</h3>
                     <h2>(Elias)</h2>
