--- a/about us.html
+++ b/about us.html
@@ -96,7 +96,7 @@
                     <p>The year 2015 was marked by another interesting event. Due to numerous requests from our students, Mestra Cristina, one of the best female capoeiristas in Europe and a star of many Nike commercials and music videos, visited us. In addition to Mestra Cristina, the seminar was led by Mestre Rui, Mestre Luis Claudio, and Contra-Mestre Rasmus.
                         In 2015, it was also time for the next Batizado, for which Mestre Rui, Mestre Banana, Mestre Luis Claudio, and Contra-Mestre Rasmus came to visit.</p>
 
-                    <iframe style="width:80%; height:450px; border-radius: 10px; margin-top: 5rem; margin-left: 10%;" src="videos/to be continued.mp4" frameborder="0" loading="lazy"></iframe>
+                    <iframe style="width:80%; height:450px; border-radius: 10px; margin-top: 5rem; margin-left: 10%;" src="https://www.youtube.com/embed/KGEPgQM6ETo?si=Dwi1i_BdfkHRl24T?mute=1" frameborder="0" loading="lazy"></iframe>
                 </div>
             </div>
 
