--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<a href="#basic">Basic Info</a>
 			<a href="#handbook">Handbook</a>
 			<a href="#archi">Archives</a>
-			<a href="#about us">About us</a>
+			<a href="about us.html">About us</a>
 			<a style="margin-right: 3rem;" href="contacts.html">Contacts</a>
 		</div>
 
