--- a/ar_c_m.html
+++ b/ar_c_m.html
@@ -70,7 +70,7 @@
          <div class="row">
 
             <div class="media">
-	            <iframe  class="media" src="https://www.youtube.com/embed/LZ4lWO9ZI-8?si=8trGJnn-1UQP_ZJZ" frameborder="0" loading="lazy"></iframe>
+	            <iframe  class="media" src="https://www.youtube.com/embed/LZ4lWO9ZI-8?si=8trGJnn-1UQP_ZJZ?mute=1" frameborder="0" loading="lazy"></iframe>
             </div>
 
 			<div class="content">
