--- a/armada.html
+++ b/armada.html
@@ -70,7 +70,7 @@
          <div class="row">
 
             <div class="media">
-	            <iframe  class="media" src="https://www.youtube.com/embed/nkXid7fn5fw?si=aiAJk7WXRb48Kznm" frameborder="0" loading="lazy"></iframe>
+	            <iframe  class="media" src="https://www.youtube.com/embed/nkXid7fn5fw?si=aiAJk7WXRb48Kznm?mute=1" frameborder="0" loading="lazy"></iframe>
             </div>
 
 			<div class="content">
