--- a/bencao.html
+++ b/bencao.html
@@ -70,7 +70,7 @@
          <div class="row">
 
             <div class="media">
-	            <iframe  class="media" src="videos/bencao.mp4" frameborder="0" loading="lazy"></iframe>
+	            <iframe  class="media" src="https://www.youtube.com/embed/Y-bQTmDbF8k?si=60eryGnO-inn2yhS?mute=1" frameborder="0" loading="lazy"></iframe>
             </div>
 
 			<div class="content">
