--- a/esquiva_d.html
+++ b/esquiva_d.html
@@ -70,7 +70,7 @@
          <div class="row">
 
             <div class="media">
-	            <iframe  class="media" src="videos/esquiva lateral.mp4" frameborder="0" loading="lazy"></iframe>
+	            <iframe  class="media" src="https://www.youtube.com/embed/0nT4f5BLKB8?si=dRyJarzmwTZepZvG?mute=1" frameborder="0" loading="lazy"></iframe>
             </div>
 
 			<div class="content">
