--- a/Ginga.html
+++ b/Ginga.html
@@ -70,7 +70,7 @@
          <div class="row">
 
             <div class="media">
-	            <iframe  class="media" src="videos/Ginga (1).mp4" frameborder="0" loading="lazy"></iframe>
+	            <iframe  class="media" src="https://www.youtube.com/embed/4fiT0gq-Z2Y?si=xnW4Mqzu2dr-MvBk?mute=1" frameborder="0" loading="lazy"></iframe>
             </div>
 
 			<div class="content">
