--- a/mestres.html
+++ b/mestres.html
@@ -258,12 +258,12 @@
             </div>
 
             <div class="box_m">
-                <img src="https://i.postimg.cc/JnnkWbwc/rui.jpg">
+                <img src="https://i.ibb.co/vvJZhsK/rui.jpg">
                 <div class="info">
                     <h3>Rui (2009)</h3>
                     <h2>(Beto)</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto ab iste quas? Aliquam voluptates dignissimos adipisci officia omnis dolores porro esse commodi eveniet. Laudantium sed dignissimos aliquam inventore eos ad!</p>
-                    <a href="#" class="btn">Learn more...</a>
+                    <p>In 1997, Professor Rui established Capoeira Group Senzala in Copenhagen, which later became one of Denmark's largest capoeira groups. Over the years, it has expanded to multiple cities in Denmark and Ukraine, with Professor Rui being recognized as Denmark's first and most skilled capoeira master.</p>
+                    <a href="rui.html" class="btn">Learn more...</a>
                 </div>
             </div>
 
