--- a/santa maria.html
+++ b/santa maria.html
@@ -66,8 +66,10 @@
                 </div>
                 <div class="content">
                     <h2>Santa Maria</h2>
-                    <p>Capoeiristas may also sing songs to accompany the Santa Maria rhythm, which often feature lyrics that reflect the history and culture of capoeira. These songs may be sung in Portuguese or other languages spoken in Brazil, such as Yoruba or Kimbundu.</p>
-                    <p>The agogô, a bell-shaped instrument, is often used to add accents and syncopation to the rhythm. The reco-reco, a notched piece of bamboo or metal, provides a scraping sound that adds texture to the overall sound of the rhythm. The caxixi, a woven basket filled with seeds or beads, is shaken to create a rattling sound that adds depth and complexity to the rhythm.</p>
+                    <p>(Sometimes called "Apanha Laranja no chão, tico-tico")</p>
+<p>This toque was created by Mestre Bimba, who called it "Hino da Capoeira Regional" (Anthem of Capoeira Regional), and had not attributed a way to play it. It is now associated with a game which exists for a long time:
+It is a game which was common to the festivals of Santa Barbara, where a tournament was organized to catch a reward placed at the center of the roda. At the beginning one put money on the floor, then for higiene and ethics reasons, one placed it in a white cloth.
+Currently, one plays it by putting an object (generally a caxixí) in the medium of the roda, which one must catch with the teeth. The one who picks up it won. The adversary must prevent him by blocking him, without moving the object, which makes of it a rather technical game. Before, one did not hesitate to hit the head which approached the reward, this is why it is advisable to play prudently. Normally, one does not sing in this rhythm, although some uses the song "Apanha Laranja no chão, tico-tico" to accompany the game.</p>
                 </div>
             </div>
         </div>
