--- a/benguela.html
+++ b/benguela.html
@@ -68,9 +68,12 @@
                 </div>
                 <div class="content">
                     <h2>Benguela</h2>
-                    <p>Benguela, in terms of its musical structure, is played in a 6/8 time signature and features a recurring melody. The berimbau, a one-stringed instrument, usually carries the primary melody, while the atabaque, a type of drum, provides the rhythm, and the pandeiro, a tambourine, contributes accents and fills.</p>
-                    <p>Benguela is also associated with specific movements and techniques within Capoeira Angola. For instance, the ginga, which is the fundamental Capoeira movement, is often executed slowly and deliberately during Benguela. Moreover, kicks like meia lua de frente and tesoura are frequently employed within this rhythm.</p>
-                    <p>Regarding its origins, Benguela is believed to have emerged from the Benguela region in Angola, a significant hub for the slave trade during the colonial era. This rhythm is thought to symbolize the struggle and resistance of enslaved Africans who were transported to Brazil and utilized Capoeira as a means of self-defense and rebellion against their oppressors.</p>
+                    <p>Formerly called "Banguela", the name Benguela derives from the name of a province in western Angola.</p>
+
+<p>This toque was created by Mestre Bimba. At that time, the game associated with this rhythm had not been developed yet, but Bimba defined it as a jogo de dentro, imbricated and highly technical, a close game of self-defense against knife attacks.</p>
+
+<p>The main particularity of Benguela is to "transform" movements so one can get out of blockings in a fluide way. That is why it is the most technical game style of Capoeira Regional, one of the most difficult to play. In Benguela, "aggressive" hits are prohibited (like martelo, ponteira...).</p>
+<p>Theoretically, no kick should be done higher than the waist, the game and body are very closed and suspicious, and one does the ginga as little as possible.</p>
                 </div>
             </div>
         </div>
