--- a/iuna.html
+++ b/iuna.html
@@ -66,8 +66,11 @@
                 </div>
                 <div class="content">
                     <h2>Iúna</h2>
-                    <p>Iúna, believed to originate in Bahia, Brazil, and named after a local river, is one of the oldest and most traditional rhythms in capoeira.</p>
-                    <p>It is closely associated with the Angola style of capoeira. Besides its role in the roda (capoeira circle), Iúna also finds its place in capoeira music, with songs often highlighting its slow and meditative characteristics. Some renowned capoeira songs featuring Iúna include "Iúna" by Mestre Bimba and "Iúna da Praia" by Mestre Pastinha.</p>
+                    <p>This toque of Capoeira Regional was created by Mestre Bimba, inspired by the bird's singing which has the same name, "iúna". He created it because his students had become too use to playing standing up.</p>
+                    <p>It is a game which is characterized mainly by its aesthetic side but without forgetting the technique. The movements must be wide, supple, less cautious, controlled (it is not the rhythm in which one tests movements that one does not control), and the game requires a perfect coordination of the movements, which is only acquired after many years of practice. This is why it is reserved only for graduated students.</p>
+		    <p>At the time of Bimba, only the most advanced could access to this game, which means that it was the game of the contra-mestres. This is why one must play it with respect. It is generally used in ceremonies or at the end of rodas. In this rhythm, there is no singing or hand clapping, and in many schools may only be played when a Mestre is present.</p>
+                    <p>Iúna was a "game of flourishes," pretty, creative, short, and full of malicìa and a game that had to have some of the cintura desprezada. At present, many people play it in an acrobatic way, which is a real drift, but now we distinguish "iúna lento", "medio", "rápido"... for a floreios game on the ground, intermediate or acrobatic.</p>
+		    <p>The word iúna is the shortened name of the bird, "inhuma" or "anhuma", of the family Anhimidae. The word derives from Tupi a'um, which means "black bird". The English name of this bird is the "Horned screamer" (Anhima cornuta).</p>
                 </div>
             </div>
         </div>
