--- a/cavalaria.html
+++ b/cavalaria.html
@@ -66,8 +66,9 @@
                 </div>
                 <div class="content">
                     <h2>Cavalaria</h2>
-                    <p>The Cavalaria rhythm is also known as the "horse rhythm" in capoeira, as it is said to resemble the sound of galloping horses. It is commonly played in the key of G, and the berimbau is usually played in the "gunga" or low-pitched tone.</p>
-                    <p>The rhythm is characterized by a steady, driving beat that is meant to inspire movement and energy. It is often played during the more intense moments of a capoeira game, when the players are pushing themselves to their limits.</p>
+                    <p>It is the alarm toque. At the time of slavery, this toque was used to inform the capoeirists of the arrival of the administrator and, during the Republic (when capoeira was prohibited), the capoeiristas used the "cavalaria" to prevent the arrival of the mounted police, the cavalry.</p>
+                    <p>When they heard this toque during their fighting training, they dispersed or transformed their game by dancing, making floreios, to make them believe that it was just an entertainment.</p>
+		    <p>In certain groups, one now uses this toque to inform the danger in the game, the violence and the discord to be avoided.</p>
                 </div>
             </div>
         </div>
