--- a/miudinho.html
+++ b/miudinho.html
@@ -68,8 +68,8 @@
                 </div>
                 <div class="content">
                     <h2>Miudinho</h2>
-                    <p>Miudinho is believed to have originated in the 1950s and 1960s in Salvador, Brazil. Developed by a group of capoeiristas seeking a faster and more intricate rhythm to challenge their skills, the name "Miudinho" is derived from the Portuguese word "miúdo," meaning small or tiny, reflecting the rhythm's characteristic close and low movements.</p>
-                    <p>A key element of Miudinho involves utilizing low movements, with capoeiristas adopting a crouched position close to the ground and employing their legs to execute a series of rapid, fluid movements. This demands strong core and leg muscles, as well as excellent balance and control.</p>
+                    <p>Created by Mestre Suassuna. The game is like Angola, but faster. There is no singing. The toque sounds like a reverse Cavalaria.</p>
+                    <p>Mestre Suassuna: "The game of miudinho is generating controversy because it is being misinterpreted. People are thinking it's a new capoeira, and it's nothing like that. I simply rescued an older capoeira, modernized the manner of playing it, changed the sequences... the name miudinho arose because I was observing that capoeiristas were playing very distant from each other and in our time we played very close; thus, I said to people, 'I want the game more minute, closer, play very tiny.' Then, I created a toque on the berimbau. Miudinho is not a new capoeira, it's a different manner to display capoeira. Just like the games of Iuna and São Bento Grande exist, the game of miudinho exists."</p>
                 </div>
             </div>
         </div>
