--- a/idalina.html
+++ b/idalina.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="content">
                     <h2>Idalina</h2>
-                    <p>The Idalina rhythm is a traditional capoeira rhythm originating in Bahia, Brazil. It finds frequent use within the roda, the circle where capoeira is played. This rhythm is named after Idalina de Oliveira, a renowned capoeirista celebrated for her graceful movements and powerful kicks.</p>
-                    <p>Besides its role in capoeira, the Idalina rhythm has also made its way into other Brazilian music genres like samba and bossa nova. It's a versatile rhythm adaptable to various musical styles and contexts. Idalina rhythm represents just one of many rhythms employed in capoeira, each possessing its distinct character and purpose, often conveying different emotions and moods during the game.</p>
+                    <p>A toque created by Mestre Bimba, who did not have time to define the game principles. Now one associates it to a game formerly practised for mortal confrontations, with razors or knives, at the foot or the hand. The maltas who clashed generally put a silk scarf around the neck in case a blade would come to attack there, so that it remains wedged.</p>
+                    <p>There is no special game style for this rhythm, Mestre Bimba usually played Idalina at trainings and unofficial Rodas.</p>
                 </div>
             </div>
         </div>
