--- a/rdb.html
+++ b/rdb.html
@@ -69,8 +69,8 @@
                 <div class="content">
                     <h2>Regional de Bimba</h2>
                     <p>Regional de Bimba is a capoeira rhythm created by Mestre Bimba. It's known for its quick and energetic tempo, produced on the berimbau.</p>
-                    <p>This rhythm finds use in capoeira games due to its suitability for rapid and dynamic movements. Mestre Bimba integrated the Regional de Bimba rhythm into his teaching, fostering unity among his students and showcasing the unique style and techniques of this capoeira form.</p>
-                    <p>Besides capoeira, Regional de Bimba's rhythm has crossed over into other music and dance forms, featuring prominently in Brazilian festivals, celebrations, samba, and traditional Brazilian music styles.</p>
+                    <p>This rhythm finds use in capoeira games due to its suitability for rapid and dynamic movements. This is the only rhythm that Mestre Bimba used to play, sing and clap hands to in the roda !</p>
+                    <p>Mestre Bimba played São Bento grande with one Berimbau and two Pandeiros.</p>
                 </div>
             </div>
         </div>
