--- a/sbp.html
+++ b/sbp.html
@@ -68,8 +68,8 @@
                 </div>
                 <div class="content">
                     <h2>São Bento Pequeno de Angola</h2>
-                    <p>The Angola rhythm is believed to have its origins in Angola, West Africa, and was introduced to Brazil by enslaved Africans. It is named after the São Bento monastery in Bahia, Brazil, where Capoeira Angola was secretly practiced during the era of slavery.</p>
-                    <p>São Bento Pequeno de Angola serves as a test of skill and endurance for Capoeiristas and challenges them to enhance their technique and creativity. Its complexity lies in its intricate structure, featuring various beats and rhythms that must be played in a specific sequence to achieve the desired effect.</p>
+                    <p>Toque of Capoeira Angola. It is used for a light "jogo de dentro", nimble, a game of technical exhibition. It is an intermediate toque between the toque of Angola and São Bento Grande de Angola. It is also played as a contra-toque by the medio while playing Angola.</p>
+                    <p>São Bento Pequeno rhythm is played by the Berimbau Medioin the Capoeira Angola orchestra. Some call São Bento Pequeno an Inverted Angola as its bits are inverted  from the Angola rhythm.</p>
                 </div>
             </div>
         </div>
