--- a/list_r.html
+++ b/list_r.html
@@ -14,8 +14,8 @@
 
     <section class="sec1">
 		<header id="header">
-			<a href="index.html" class="logo"><img src="https://static.wixstatic.com/media/8e20e3_a7748ace886e4be7a8e491277ec17e36~mv2.png/v1/fill/w_138,h_140,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8e20e3_ce47282406f64a23a1014f7f70da3aef.png"></a>
-			<nav class="navbar">
+			<a href="index.html" class="logo"><img style="height: 100px; width: auto; margin-left: 30px;" src="https://static.wixstatic.com/media/8e20e3_a7748ace886e4be7a8e491277ec17e36~mv2.png/v1/fill/w_138,h_140,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/8e20e3_ce47282406f64a23a1014f7f70da3aef.png"></a>
+			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="basic.html">Basic Info</a>
@@ -44,7 +44,7 @@
 						</ul>
 					</li>
 					<li><a href="about us.html">About us</a></li>
-					<li><a href="contacts.html">Contacts</a></li>
+					<li><a style="margin-right: 3rem;" href="contacts.html">Contacts</a></li>
 					<li class="menu-btn"><a style="border-bottom: none;"  href="#"><img style="height: 45px; width: auto;" src="https://cdn-icons-png.flaticon.com/512/7543/7543138.png"></a>
 						<ul>
 							<li><a style="margin-left: 0;" href="index.html">Home</a></li>
