--- a/history.html
+++ b/history.html
@@ -38,7 +38,7 @@
                         <li><a style="margin-left: 0; display: none;" href="insight.html">Insight</a></li>
                         <li><a style="margin-left: 0;" href="interview.html">Interviews</a></li>
                         <li><a style="margin-left: 0;" href="quotes.html">Mestres' Quotes</a></li>
-                        <li><a style="margin-left: 0;" href="docs.html">Media</a></li>
+                        <li><a style="margin-left: 0;" href="media.html">Media</a></li>
                     </ul>
                 </li>
                 <li><a href="about us.html">About us</a></li>
