--- a/list_move.html
+++ b/list_move.html
@@ -72,7 +72,7 @@
 
 			<h2><a href="#" class="btn">Strikes</a></h2>
 
-			<h2><a href="#" class="btn">Takedowns</a></h2>
+			<h2><a href="takedowns.html" class="btn">Takedowns</a></h2>
 
 			<h2><a href="#" class="btn">Acrobatics</a></h2>
 
