--- a/list_move.html
+++ b/list_move.html
@@ -70,7 +70,7 @@
 
 			<h2><a href="Movements.html" class="btn">Kicks</a></h2>
 
-			<h2><a href="#" class="btn">Strikes</a></h2>
+			<h2><a href="strikes.html" class="btn">Strikes</a></h2>
 
 			<h2><a href="takedowns.html" class="btn">Takedowns</a></h2>
 
