--- a/strikes.html
+++ b/strikes.html
@@ -65,6 +65,7 @@
         <div class="list">
 
 			<h2><a href="galopante.html" class="btn">Galopante</a></h2>
+			<h2><a href="cotovelada.html" class="btn">Cotovelada</a></h2>
 
 		</div>
 
