--- a/takedowns.html
+++ b/takedowns.html
@@ -65,6 +65,7 @@
         <div class="list">
 
 			<h2><a href="rasteira.html" class="btn">Rasteira</a></h2>
+			<h2><a href="tesoura de costa.html" class="btn">Tesoura de costa</a></h2>
 
 		</div>
 
