Update meia-lua de frente.html

--- a/meia-lua de frente.html
+++ b/meia-lua de frente.html
@@ -75,11 +75,11 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Meia-lua de frente</h3>
-				<p><b>Execution:</b> To perform the Meia Lua de Frente, a Capoeirista swings their leg in a semicircular trajectory from outside to inside, targeting their opponent's upper body, head, or even face. This kick is typically delivered with the inside edge of the foot.</p>
-				<p><b>Purpose:</b> The primary purpose of the Meia Lua de Frente is to create a threat to the opponent's upper body while keeping the attacker's own upper body protected. It's a quick and deceptive kick that can be used to maintain distance, fake an attack, or set up follow-up movements.</p>
-				<p><b>Combination:</b> Capoeiristas often use the Meia Lua de Frente as a setup for more complex kicks and movements. It can be followed by other kicks like the Martelo, Armada, or even a simple push kick (Chapa). It's a versatile kick that can be used to transition between different movements and maintain unpredictability in the game.</p>
+				<p><b>Execution:</b> To perform the Meia Lua de Frente, a Capoeirista swings their leg in a semicircular trajectory from outside to inside, targeting the upper body, particularly the head, of their opponent. This kick is typically executed with the inside edge of the foot.</p>
+				<p><b>Purpose:</b> The primary goal of the Meia Lua de Frente is to deliver a quick and controlled strike to the upper body of the attacker. It's a fast and deceptive kick that can be used to maintain distance, simulate an attack, or prepare for subsequent movements.</p>
+				<p><b>Combination:</b> Capoeiristas often use the Meia Lua de Frente as a preparatory element for more complex kicks and movements. It can be combined with other strikes such as Martelo, Armada, or even a simple push kick (Chapa). It's a versatile kick that can be employed to transition between different movements and maintain unpredictability in the game.</p>
 				<p><b>Difficulty:</b> While the basic concept of the kick is relatively simple, executing it with speed, precision, and control requires practice. Mastery of the Meia Lua de Frente involves understanding the right timing, distance, and angle to maximize its effectiveness.</p>
-				<p><b>Roda Usage:</b> The Meia Lua de Frente is a common kick within the Capoeira roda. It's used both defensively and offensively to engage with an opponent, maintain the flow of the game, and create opportunities for acrobatics, escapes, or takedowns.</p>
+				<p><b>Roda Usage:</b> The Meia Lua de Frente is a common kick in Capoeira, utilized in both offensive actions to interact with the opponent and defensively to sustain the flow of the game and create opportunities for acrobatics.</p>
             </div>
 
         </div>
