--- a/pezao.html
+++ b/pezao.html
@@ -75,11 +75,11 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Pezão</h3>
-				<p><b>Technique:</b> The "Pezão Rotado" combines the stomping motion of the traditional "Pezão" kick with a spin. Capoeiristas typically rotate their upper body while executing the stomp.</p>
-				<p><b>Purpose:</b> This kick is designed to add an element of surprise and variation to the basic "Pezão." The spinning motion can disorient opponents and create opportunities for attack or defense.</p>
-				<p><b>Execution:</b> To perform the "Pezão Rotado," a capoeirista starts by lifting their leg as if they were going to execute a standard "Pezão." However, before stomping down, they rotate their upper body in the direction of the raised leg. This spinning motion adds momentum to the kick.</p>
-				<p><b>Variations:</b> Like many Capoeira techniques, the "Pezão Rotado" can be adapted with variations. The exact spinning motion and target may vary among practitioners and schools.</p>
-				<p><b>Context:</b> This kick is often integrated into Capoeira's flowing and acrobatic gameplay. It can be used in the "ginga" as part of a sequence of movements.</p>
+				<p><b>Technique:</b> The "Pezão Rotado" combines the strike of the traditional "Pezão Lateral" with rotation. Capoeiristas typically rotate their upper body during the execution of the kick.</p>
+				<p><b>Purpose:</b> This kick is designed to add an element of surprise and variation to the basic "Pezão Lateral." The spinning motion can disorient opponents and create opportunities for attack or defense.</p>
+				<p><b>Execution:</b>To perform "Pezão Rotado," a capoeirista begins to turn as if they were about to execute a standard "Armada." However, halfway through the turn, they perform the standard "Pezão Lateral" kick. This spinning motion adds momentum and unpredictability to the kick.</p>
+				<p><b>Power and Speed:</b> The "Pezão Rotado" kick is known for its speed and strength. The rapid straight motion generates force that can be used to trip the opponent or deliver a significant blow.</p>
+				<p><b>Purpose:</b> This kick is used for attacking the opponent. It is challenging to evade due to its speed and the fact that the kick is delivered directly. Upon impact, "Pezão Rotado" is powerful enough to strike the opponent effectively.</p>
 				<p><b>Challenges:</b> Executing the "Pezão Rotado" effectively requires good balance, coordination, and timing. The rotation should be controlled to avoid losing balance and to align the kick with the target accurately.</p>
             </div>
 
