--- a/gancho.html
+++ b/gancho.html
@@ -75,13 +75,12 @@
 
 			<div class="content">
 				<h3 style="margin-top: 1.5rem;">Gancho</h3>
-				<p><b>Technique:</b> The "Gancho" is a hooking kick that targets an opponent's legs, typically aiming for their supporting leg or their thigh area. It's executed with a swinging, hooking motion of the leg.</p>
-				<p><b>Purpose:</b> The primary purpose of the "Gancho" is to disrupt an opponent's balance, trip them, or create an opening for follow-up attacks. When executed effectively, it can take an opponent off their feet or set them off balance, making them vulnerable.</p>
-				<p><b>Execution:</b> To perform the "Gancho" kick, a Capoeirista swings their leg in a hooking motion towards the opponent's leg. It's essential to connect with the opponent's supporting leg or thigh to maximize the sweeping effect.</p>
-				<p><b>Variations:</b> There are variations of the "Gancho" kick, such as the "Gancho de Fora" (outside hook kick) and "Gancho de Dentro" (inside hook kick). These variations differ in the direction of the hooking motion.</p>
-				<p><b>Context:</b> The "Gancho" kick is often used in close-range combat situations in Capoeira. It's a defensive and offensive technique that can be part of a fluid sequence of movements in the "Jogo de Dentro" (close game) or during the "Roda" (the Capoeira circle).</p>
-				<p><b>Challenges:</b> Executing the "Gancho" effectively requires precise timing and balance. It's essential to aim for the opponent's supporting leg or thigh to maximize the sweeping effect. The power of the kick is generated through the swinging motion of the leg.</p>
-				<p><b>Creativity:</b> Capoeira encourages creativity and adaptability, so practitioners may incorporate their unique style and variations of the "Gancho" into their gameplay.</p>
+				<p><b>Technique:</b> "Gancho" is a hooking kick aimed at the opponent's head. It is executed with a swinging, hooking motion of the leg.</p>
+				<p><b>Purpose:</b> The primary purpose of "Gancho" is to attack the opponent with a powerful and visually deceptive strike. When executed effectively, it can take the opponent off their feet or disrupt their balance, making them vulnerable.</p>
+				<p><b>Execution:</b> To perform the "Gancho" kick, a Capoeirista swings their leg in a hooking motion towards the opponent's head. The leg is extended diagonally forward with a rotation of the torso, creating a motion reminiscent of a hook.</p>
+				<p><b>Context:</b> The "Gancho" kick is often used in close-range combat situations in Capoeira. It is a defensive and offensive technique that can be part of a fluid sequence of movements in "Jogo de Dentro" (close game) or during "Jogo de Fora" (contact and aggressive game).</p>
+				<p><b>Challenges:</b> Executing "Gancho" effectively requires precise timing and balance. It is crucial to aim for the opponent's head to achieve maximum impact, but this requires good flexibility and control of one's body.</p>
+				<p><b>Creativity:</b> Capoeira encourages creativity and adaptability, so practitioners may incorporate their unique style and variations of "Gancho" into their gameplay.</p>
             </div>
 
         </div>
