--- a/Movements.html
+++ b/Movements.html
@@ -80,7 +80,7 @@
 
 			<h2><a href="gancho.html" class="btn">Gancho</a></h2>
 
-			<h2><a href="ar_c_m.html" class="btn">Armada con Martelo</a></h2>
+			<h2><a href="ar_c_m.html" class="btn">Armada com Martelo</a></h2>
 
 			<h2><a href="ar_p.html" class="btn">Armada Pulada</a></h2>
 
