--- a/ar_c_m.html
+++ b/ar_c_m.html
@@ -75,7 +75,7 @@
 
 			<div class="content">
                 <h3 style="margin-top: 1.5rem;">Armada com Martelo</h3>
-                <p><b>Execution:</b> The Armada com Martelo is initiated with a spinning motion, during which the Capoeirista lifts their kicking leg high and strikes with a hammering motion using the heel or the lower shin. It combines the circular sweep of the Armada with the downward striking motion of the Martelo.</p>
+                <p><b>Execution:</b> Armada com Martelo begins with a spinning motion, during which the Capoeirista lifts their kicking leg high and, with a jump, delivers a strike with the inner part of the foot. This strike combines the circular sweep of Armada with the downward striking motion of Martelo.</p>
                 <p><b>Purpose:</b> This kick is designed to target an opponent's upper body, head, or shoulders, making it a powerful offensive move in Capoeira. It can be used to create an effective threat while maintaining good coverage against counterattacks.</p>
                 <p><b>Difficulty:</b> The Armada com Martelo requires a high degree of agility, balance, and flexibility. The ability to execute a fast and controlled spin while maintaining power in the kick is a sign of a skilled Capoeirista.</p>
                 <p><b>Combination:</b> Capoeiristas often use this kick in combination with other movements and kicks. It can be part of a sequence that includes spins, sweeps, and acrobatic elements. Capoeira is known for its fluid transitions between various kicks and movements.</p>
