--- a/bencao.html
+++ b/bencao.html
@@ -75,11 +75,11 @@
 
 			<div class="content">
                 <h3 style="margin-top: 1.5rem;">Benção</h3>
-                <p><b>Execution:</b> The Benção is executed by swinging one leg in an arcing motion, aiming to strike an opponent with the sole of the foot or the lower shin. The movement is characterized by its straight-legged, front-kicking motion. The kicking leg is extended, and the toes are usually pointed.</p>
-                <p><b>Purpose:</b> The primary purpose of the Benção is to create a threat to an opponent, maintain distance, and set up for other Capoeira movements. It can be used both defensively and offensively. When performed quickly and with precision, it can be a surprising and effective attack.</p>
-                <p><b>Combination:</b> In a Capoeira game, the Benção is often used in combination with other kicks, spins, and acrobatic movements. It is an essential component of sequences that showcase a Capoeirista's agility and creativity.</p>
-                <p><b>Roda Usage:</b> In the Capoeira roda (the circle where the game is played), the Benção is used to engage opponents, maintain the flow of the game, and demonstrate skill. It is a fundamental movement that showcases the elegance and martial artistry of Capoeira.</p>
-                <p><b>Training:</b> Like other Capoeira movements, training for the Benção involves developing flexibility, balance, and core strength. Capoeiristas practice this kick repeatedly to improve its speed and accuracy.</p>
+                <p><b>Execution:</b> Benção is performed by swiftly extending the bent knee, aiming to strike the opponent. The kick is delivered with the sole of the foot. The kicking leg is straightened, and the toes are usually pointed towards the practitioner.</p>
+                <p><b>Purpose:</b> The primary purpose of Benção is to create a threat to the opponent, maintain distance, and set the stage for other movements in Capoeira. When executed rapidly and accurately, it can become an unexpected and effective attack.</p>
+                <p><b>Combination:</b>  In the game of Capoeira, Benção is often used in combination with other kicks and spins. It is an essential component of sequences that showcase the practitioner's agility and creativity.</p>
+                <p><b>Roda Usage:</b> In the Capoeira roda (the circle where the game is played), Benção is employed during aggressive gameplay. Due to its direct and swift nature, it is challenging to evade.</p>
+                <p><b>Training:</b> Like other movements in Capoeira, training for Benção involves developing flexibility, balance, and core strength. Practitioners repeatedly practice this kick to enhance its speed and precision.</p>
                 <p><b>Safety:</b> Safety is essential when performing the Benção. Capoeiristas need to be mindful of their positioning and the distance to their partner or opponent to avoid unintended contact. Control and precision are key to minimizing the risk of injury.</p>
              </div>
 
